<resources>
    <string name="app_name">ExamCountdown</string>
    <string name="tab_text_1">Future</string>
    <string name="tab_text_2">Past</string>
    <string name="text_1">Subject</string>
    <string name="text_2">Name</string>
    <string name="field_1">ex. Mathematics</string>
    <string name="field_2">ex. Algebra</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="string_format">hh:mm</string>
    <string name="appearance">Appearance</string>
    <string name="create">Create</string>
    <string name="remdays">remDays</string>
    <string name="days_until">days until</string>
    <string name="date">date</string>
    <string name="delete">Delete</string>
    <string name="time_format">dd/mm/yyyy hh:mm</string>
</resources>